src/test/rustdoc-ui/automatic-links.stderr
error: unneeded long form for URL
  --> $DIR/automatic-links.rs:3:5
   |
LL | /// [http://a.com](http://a.com)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<http://a.com>`
   |
note: the lint level is defined here
  --> $DIR/automatic-links.rs:1:9
   |
LL | #![deny(automatic_links)]
   |         ^^^^^^^^^^^^^^^

error: unneeded long form for URL
  --> $DIR/automatic-links.rs:5:5
   |
LL | /// [http://b.com]
   |     ^^^^^^^^^^^^^^ help: use an automatic link instead: `<http://b.com>`

error: won't be a link as is
  --> $DIR/automatic-links.rs:13:5
   |
LL | /// https://somewhere.com?hello=12
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com?hello=12>`

error: aborting due to 3 previous errors

